# Book/docs/swagger.json
@@ -77,6 +77,36 @@
                 }
             }
         },
+        "/book/updatebook": {
+            "get": {
+                "tags": [
+                    "图书模块"
+                ],
+                "summary": "修改图书借阅状态",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "图书ID",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "图书状态",
+                        "name": "isreturn",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\":\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "tags": [
@@ -140,33 +170,11 @@
                     },
                     {
                         "type": "string",
-                        "description": "手机号",
-                        "name": "phone",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
                         "description": "邮箱",
                         "name": "email",
                         "in": "formData"
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "code\":\"message\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/userlists": {
-            "get": {
-                "tags": [
-                    "用户模块"
-                ],
-                "summary": "用户列表",
                 "responses": {
                     "200": {
                         "description": "code\":\"message\"}",
